--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,8 +2,9 @@ name: Build (amd64 and arm64)
 
 on:
   push:
-    # Trigger on tag pushes (e.g., v1.0.0)
-    tags: [ 'v*' ] 
+    branches: [ release ]
+  pull_request:
+    branches: [ release ]
   workflow_dispatch:
 
 jobs:
@@ -13,18 +14,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          # --- AMD64 Build (Standard Label) ---
           - os: ubuntu-24.04
             os-name: Ubuntu 24.04
             arch: amd64
-            runner: ubuntu-24.04  # Standard AMD64 runner label
-          # --- ARM64 Build (FIXED Label) ---
+            runner: ubuntu-24.04
           - os: ubuntu-24.04-arm64
             os-name: Ubuntu 24.04 (ARM64)
             arch: arm64
-            runner: ubuntu-24.04-arm 
-    
-    # The job will run on the specific runner defined by the matrix
+            runner: ubuntu-24.04-arm64
     runs-on: ${{ matrix.runner }}
 
     steps:
@@ -54,22 +51,13 @@ jobs:
           ls -la bin || true
           file bin/* || true
 
-      - name: Prepare per-arch filenames
-        # Renames the compiled binary to include the architecture (e.g., de_ardupilot-amd64)
-        run: |
-          cp bin/de_ardupilot bin/de_ardupilot-${{ matrix.arch }}
-
-      - name: Upload to GitHub Release (on tags)
-        # This step only runs when triggered by a tag push
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
         with:
-          # Attaches the newly named binary and config files to the release
-          files: |
-            bin/de_ardupilot-${{ matrix.arch }}
+          name: de_ardupilot-${{ matrix.arch }}
+          path: |
+            bin/de_ardupilot
             bin/de_mavlink.config.module.json
             bin/template.json
-          draft: false
-          prerelease: false
+          retention-days: 1
+          if-no-files-found: warn
