fix logic tracking

--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -143,11 +143,13 @@
 
 "follow_me":
 {
-  "PID_P_X": 0.2,
-  "PID_P_Y": 0.2,
+  "PID_P_X": 1.0,
+  "PID_P_Y": 1.0,
   "PID_I_X": 0.01,
   "PID_I_Y": 0.01,
-  "smoothing": 0.2
+  "expo_factor": 0.5,
+  "deadband": 0.1,
+  "rate_limit": 0.1
 }
 }
 
