feature: dynamic update to tracking and rcmap  of config json

--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -144,12 +144,14 @@
 "follow_me":
 {
   "PID_P_X": 1.0,
-  "PID_P_Y": 1.0,
-  "PID_I_X": 0.00,
-  "PID_I_Y": 0.00,
-  "expo_factor": 0.5,
-  "deadband": 0.1,
-  "rate_limit": 0.1
+  "PID_P_Y": 0.0,
+  "PID_I_X": 0.0,
+  "PID_I_Y": 0.3,
+  "expo_factor_x": 0.0,
+  "expo_factor_y": 0.0,
+  "deadband_x": 0.05,
+  "deadband_y": 0.05,
+  "rate_limit": 0.9
 }
 }
 
