--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -151,12 +151,16 @@
   "PID_D_Y": 0.01,
   "expo_x": 0.0,
   "expo_y": 0.0,
-  "deadband_x": 0.01,
-  "deadband_y": 0.01,
-  "rate_limit": 0.9,
+  "deadband_x": 0.001,
+  "deadband_y": 0.001,
+  "rate_limit": 0.1,
   "center_hold_enabled": false,
   "center_hold_y_band": 0.05,
-  "center_hold_decay": 0.1
+  "center_hold_decay": 0.1,
+
+  "kalman_enabled": true,
+  "kalman_process_noise_q": 0.05,
+  "kalman_measurement_noise_r": 0.1
 }
 }
 
