--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -119,49 +119,73 @@
 
   
 
-// should be a channel from 1 to 8. when High all commands from GCS will be ignored including RC-Override.
-"rc_block_channel": -1,
+  // should be a channel from 1 to 8. when High all commands from GCS will be ignored including RC-Override.
+  "rc_block_channel": -1,
 
-// Used for Gamepad control via Drone-Engage Web Client
-// Determine channels enabled, reverse, max & min PWM range
-"rc_channels":
-{
-    "rc_smart_channels": // optional but very recommended.
-    { 
-      "active": true, // if active not specified then it is assumed active by default.
-      
-      // ROLL - PITCH - THR - YAW regardless of actual settings on ardupilot 
-      "rc_channel_enabled": [1, 1, 1, 1], // optional
-      "rc_channel_limits_max": [2000,2000,2000,2000], // optional if not exist then global rc_channel_limits_max are used
-      "rc_channel_limits_min": [1000,1000,1000,1000]  // optional if not exist then global rc_channel_limits_min are used
+  // Used for Gamepad control via Drone-Engage Web Client
+  // Determine channels enabled, reverse, max & min PWM range
+  "rc_channels":
+  {
+      "rc_smart_channels": // optional but very recommended.
+      { 
+        "active": true, // if active not specified then it is assumed active by default.
+        
+        // ROLL - PITCH - THR - YAW regardless of actual settings on ardupilot 
+        "rc_channel_enabled": [1, 1, 1, 1], // optional
+        "rc_channel_limits_max": [2000,2000,2000,2000], // optional if not exist then global rc_channel_limits_max are used
+        "rc_channel_limits_min": [1000,1000,1000,1000]  // optional if not exist then global rc_channel_limits_min are used
+      },
+      "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+      "rc_channel_reverse": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
+      "rc_channel_limits_max": [2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
+      "rc_channel_limits_min": [1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
+  },
+
+  "follow_me":
+  {
+    "quad":
+    {
+      "PID_P_X": 0.2,
+      "PID_P_Y": 3.6,
+      "PID_I_X": 0.0, //0.05,
+      "PID_I_Y": 0.0, //0.08,
+      "PID_D_X": 0.01,
+      "PID_D_Y": 0.05,
+      "expo_x": 0.0,
+      "expo_y": 0.0,
+      "deadband_x": 0.001,
+      "deadband_y": 0.025,
+      "rate_limit": 0.05,
+      "center_hold_enabled": false,
+      "center_hold_y_band": 0.05,
+      "center_hold_decay": 0.1,
+
+      "kalman_enabled": true,
+      "kalman_process_noise_q": 0.05,
+      "kalman_measurement_noise_r": 0.1
     },
-    "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-    "rc_channel_reverse": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-    "rc_channel_limits_max": [2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
-    "rc_channel_limits_min": [1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
-},
+    "plan":
+    {
+      "PID_P_X": 0.8,
+      "PID_P_Y": 0.6,
+      "PID_I_X": 0.0, //0.05,
+      "PID_I_Y": 0.1, //0.08,
+      "PID_D_X": 0.1,
+      "PID_D_Y": 0.5,
+      "expo_x": 0.0,
+      "expo_y": 0.0,
+      "deadband_x": 0.001,
+      "deadband_y": 0.001,
+      "rate_limit": 0.1,
+      "center_hold_enabled": false,
+      "center_hold_y_band": 0.05,
+      "center_hold_decay": 0.1,
 
-"follow_me":
-{
-  "PID_P_X": 0.8,
-  "PID_P_Y": 0.6,
-  "PID_I_X": 0.0, //0.05,
-  "PID_I_Y": 0.0, //0.08,
-  "PID_D_X": 0.01,
-  "PID_D_Y": 0.01,
-  "expo_x": 0.0,
-  "expo_y": 0.0,
-  "deadband_x": 0.001,
-  "deadband_y": 0.001,
-  "rate_limit": 0.1,
-  "center_hold_enabled": false,
-  "center_hold_y_band": 0.05,
-  "center_hold_decay": 0.1,
-
-  "kalman_enabled": true,
-  "kalman_process_noise_q": 0.05,
-  "kalman_measurement_noise_r": 0.1
-}
+      "kalman_enabled": true,
+      "kalman_process_noise_q": 0.05,
+      "kalman_measurement_noise_r": 0.1
+    }
+  }
 }
 
 
