--- a/de_mavlink.config.module.json
+++ b/de_mavlink.config.module.json
@@ -1,193 +1,424 @@
-{ 
-  // A name and GUID for this module as multiple modules sometimes can be added.
-  "module_id": "FCB_CTRL", 
-  
-  // IP & Port Communication Module is listening to.
-  "s2s_udp_target_ip": "127.0.0.1",
-  "s2s_udp_target_port": "60000", 
-  // IP & Port of this module
-  "s2s_udp_listening_ip": "127.0.0.1", 
-  "s2s_udp_listening_port": "61003", 
-  "s2s_udp_packet_size": "8192",
-  
-  // How to connect to Ardupilot board
-  // Using udp connection
-  // "fcb_connection_uri": 
-  // {"type": "udp",
-  //  "ip": "0.0.0.0",
-  //  "port":14551
-  // },
-   
-  //"fcb_connection_uri": 
-  //{"type": "tcp",
-  //"ip": "127.0.0.1",
-  //  "port":5760
-  //},
-
-  // Using serial interface: static port 
-  "fcb_connection_uri":
-  {
-    "type": "serial",
-    "port": "auto",
-    "baudrate": 115200,
-    "dynamic": false
-  },
-
-  // Using serial interface: dynamic port search -- it will scan ports /dev/ttyUSB0 to /dev/ttyUSB10
-  // "fcb_connection_uri": 
-  // {
-  //   "type": "serial",
-  //   "port": "/dev/ttyUSB",
-  //   "baudrate": 115200,
-  //   "dynamic": true
-  // },
-
-  
-
-
-      
-  // Logger Section
-  "logger_enabled"            : true,
-  "logger_debug"              : false,
-
-
-  
-  // Default optimization level. This number controls the rate at which mavlink is sent in telemetry mode.
-  // Adjust it to reduce bandwidth 0 - max bandwidth 3 - min bandwidth
-  "default_optimization_level" : 2, 
-  //udp_proxy_enabled: true means to open udpProxy for telemetry on this board.
-  //the connection is created on the machien where this code runs not via communicator module.
-  "udp_proxy_enabled": true,
-  // udp_proxy_fixed_port can be changed from webclient.
-  // even if you deleted this field you are still 
-  //"udp_proxy_fixed_port":15412,
-
-  "event_fire_channel": 16,
-  "event_wait_channel": 15,
-  
-  "read_only_mode": false,
-
-  // if value not equal to zero then only recieve mavlinks of sysid specified in the value (optional-advanced). 
-  //"only_allow_ardupilot_sysid": 0,
-
-  "message_timeouts":
-  { 
-        "0": [0,1000,2000,3000],
-        "1": [0,250,500,1000],
-        "2": [0,250,500,1000],     // SYSTEM_TIME
-       "24": [0,800,1000,2000],    // GPS_RAW_INT
-       "27": [0,500,1000,2000],    // RAW_IMU
-       "28": [0,500,1000,2000],    // RAW_PRESSURE
-       "29": [0,500,2000,4000],    // SCALED_PRESSURE
-       "30": [0,250,1000,2000],    // ATTITUDE
-       "32": [0,250,1000,2000],    // LOCAL_POSITION_NED
-       "33": [0,250,1000,2000],    // GLOBAL_POSITION_INT
-       "34": [0,500,1000,2000],    // RC_CHANNELS_SCALED
-       "35": [0,500,1000,2000],    // RC_CHANNELS_RAW
-       "36": [0,1000,2000,2000],   // SERVO_OUTPUT_RAW
-       "42": [0,1000,2000,4000],   // MISSION_CURRENT
-       "62": [0,250,500,1000],     // NAV_CONTROLLER_OUTPUT
-       "65": [0,500,1000,2000],    // RC_CHANNELS
-       "74": [0,500,1000,2000],    // VFR_HUD 
-       "87": [0,500,1000,1000],    // POSITION_TARGET_GLOBAL_INT
-       "116": [0,1000,2000,4000],  // SCALED_IMU2
-       "124": [0,800,1000,2000],   // GPS2_RAW
-       "125": [0,1000,2000,4000],  // POWER STATUS
-       "129": [0,1000,2000,4000],  // SCALED_IMU3
-       "136": [0,500,1000,2000],   // TERRAIN_REPORT
-       "137": [0,500,2000,4000],   // SCALED_PRESSURE2
-       "143": [0,500,2000,4000],   // SCALED_PRESSURE3
-       "147": [0,500,2000,4000],   // BATTERY_STATUS
-       "152": [0,4000,8000,12000], // MEMINO
-      "163": [0,250,500,1000],     // AHRS
-      "164": [0,2000,4000,12000],   // SIMSTATE
-      "165": [0,250,1000,2000],    // HWSTATUS
-      "168": [0,1000,2000,4000],   // WIND
-      "178": [0,250,500,1000],     // AHRS2
-      "182": [0,250,500,1000],     // AHRS3
-      "193": [0,250,500,1000],     // EKF_STATUS_REPORT
-      "241": [0,250,1000,2000],    // VIBRATION 
-      "234": [0,250,1000,2000],    // HIGH_LATENCY 
-      "235": [0,250,1000,2000],    // HIGH_LATENCY2 
-      "264": [0,1000,3000,4000],    // FLIGHT_INFORMATION
-      "285": [0,1000,1000,2000],    // GIMBAL_DEVICE_ATTITUDE_STATUS
-    "11030": [0,500,1000,5000],   // ESC_TELEMETRY_1_TO_4
-    "11031": [0,1000,2000,5000],   // ESC_TELEMETRY_5_TO_8
-    "11032": [0,1000,2000,5000]    // ESC_TELEMETRY_9_TO_12
-      
-  },
-
-  
-
-  // should be a channel from 1 to 8. when High all commands from GCS will be ignored including RC-Override.
-  "rc_block_channel": -1,
-
-  // Used for Gamepad control via Drone-Engage Web Client
-  // Determine channels enabled, reverse, max & min PWM range
-  "rc_channels":
-  {
-      "rc_smart_channels": // optional but very recommended.
-      { 
-        "active": true, // if active not specified then it is assumed active by default.
-        
-        // ROLL - PITCH - THR - YAW regardless of actual settings on ardupilot 
-        "rc_channel_enabled": [1, 1, 1, 1], // optional
-        "rc_channel_limits_max": [2000,2000,2000,2000], // optional if not exist then global rc_channel_limits_max are used
-        "rc_channel_limits_min": [1000,1000,1000,1000]  // optional if not exist then global rc_channel_limits_min are used
-      },
-      "rc_channel_enabled": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-      "rc_channel_reverse": [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
-      "rc_channel_limits_max": [2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000,2000],
-      "rc_channel_limits_min": [1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000,1000]
-  },
-
-  "follow_me":
-  {
-    "quad":
-    {
-      "PID_P_X": 0.2,
-      "PID_P_Y": 3.6,
-      "PID_I_X": 0.0, //0.05,
-      "PID_I_Y": 0.0, //0.08,
-      "PID_D_X": 0.01,
-      "PID_D_Y": 0.05,
-      "expo_x": 0.0,
-      "expo_y": 0.0,
-      "deadband_x": 0.001,
-      "deadband_y": 0.025,
-      "rate_limit": 0.05,
-      "center_hold_enabled": false,
-      "center_hold_y_band": 0.05,
-      "center_hold_decay": 0.1,
-
-      "kalman_enabled": true,
-      "kalman_process_noise_q": 0.05,
-      "kalman_measurement_noise_r": 0.1,
-      "loose_altitude": false
+{
+    "default_optimization_level": 2,
+    "event_fire_channel": 16,
+    "event_wait_channel": 15,
+    "fcb_connection_uri": {
+        "ip": "0.0.0.0",
+        "port": 7660,
+        "type": "tcp"
     },
-    "plan":
-    {
-      "PID_P_X": 0.8,
-      "PID_P_Y": 0.6,
-      "PID_I_X": 0.0, //0.05,
-      "PID_I_Y": 0.1, //0.08,
-      "PID_D_X": 0.1,
-      "PID_D_Y": 0.5,
-      "expo_x": 0.0,
-      "expo_y": 0.0,
-      "deadband_x": 0.001,
-      "deadband_y": 0.001,
-      "rate_limit": 0.1,
-      "center_hold_enabled": false,
-      "center_hold_y_band": 0.05,
-      "center_hold_decay": 0.1,
-
-      "kalman_enabled": true,
-      "kalman_process_noise_q": 0.05,
-      "kalman_measurement_noise_r": 0.1
-    }
-  }
+    "follow_me": {
+        "plan": {
+            "PID_D_X": 0.1,
+            "PID_D_Y": 0.5,
+            "PID_I_X": 0.0,
+            "PID_I_Y": 0.1,
+            "PID_P_X": 0.8,
+            "PID_P_Y": 0.6,
+            "center_hold_decay": 0.1,
+            "center_hold_enabled": false,
+            "center_hold_y_band": 0.05,
+            "deadband_x": 0.001,
+            "deadband_y": 0.001,
+            "expo_x": 0.0,
+            "expo_y": 0.0,
+            "kalman_enabled": true,
+            "kalman_measurement_noise_r": 0.1,
+            "kalman_process_noise_q": 0.05,
+            "rate_limit": 0.1
+        },
+        "quad": {
+            "PID_D_X": 0.01,
+            "PID_D_Y": 0.05,
+            "PID_I_X": 0.0,
+            "PID_I_Y": 0.0,
+            "PID_P_X": 0.2,
+            "PID_P_Y": 3.6,
+            "center_hold_decay": 0.1,
+            "center_hold_enabled": false,
+            "center_hold_y_band": 0.05,
+            "deadband_x": 0.001,
+            "deadband_y": 0.025,
+            "expo_x": 0.0,
+            "expo_y": 0.0,
+            "kalman_enabled": true,
+            "kalman_measurement_noise_r": 0.1,
+            "kalman_process_noise_q": 0.05,
+            "loose_altitude": false,
+            "rate_limit": 0.05
+        }
+    },
+    "logger_debug": false,
+    "logger_enabled": true,
+    "mavlink_ids": {
+        "de_mavlink_gcs_id": 255,
+        "only_allow_ardupilot_compid": 0,
+        "only_allow_ardupilot_sysid": 0
+    },
+    "message_timeouts": {
+        "0": [
+            0,
+            1000,
+            2000,
+            3000
+        ],
+        "1": [
+            0,
+            250,
+            800,
+            1000
+        ],
+        "11030": [
+            0,
+            500,
+            1000,
+            5000
+        ],
+        "11031": [
+            0,
+            1000,
+            2000,
+            5000
+        ],
+        "11032": [
+            0,
+            1000,
+            2000,
+            5000
+        ],
+        "116": [
+            0,
+            1000,
+            2000,
+            4000
+        ],
+        "124": [
+            0,
+            800,
+            1000,
+            2000
+        ],
+        "125": [
+            0,
+            1000,
+            2000,
+            4000
+        ],
+        "129": [
+            0,
+            1000,
+            2000,
+            4000
+        ],
+        "136": [
+            0,
+            500,
+            1000,
+            2000
+        ],
+        "137": [
+            0,
+            500,
+            2000,
+            4000
+        ],
+        "143": [
+            0,
+            500,
+            2000,
+            4000
+        ],
+        "147": [
+            0,
+            500,
+            2000,
+            4000
+        ],
+        "152": [
+            0,
+            4000,
+            8000,
+            12000
+        ],
+        "163": [
+            0,
+            250,
+            500,
+            1000
+        ],
+        "164": [
+            0,
+            2000,
+            4000,
+            12000
+        ],
+        "165": [
+            0,
+            250,
+            1000,
+            2000
+        ],
+        "168": [
+            0,
+            1000,
+            2000,
+            4000
+        ],
+        "178": [
+            0,
+            250,
+            500,
+            1000
+        ],
+        "182": [
+            0,
+            250,
+            500,
+            1000
+        ],
+        "193": [
+            0,
+            250,
+            500,
+            1000
+        ],
+        "2": [
+            0,
+            250,
+            800,
+            1000
+        ],
+        "234": [
+            0,
+            250,
+            1000,
+            2000
+        ],
+        "235": [
+            0,
+            250,
+            1000,
+            2000
+        ],
+        "24": [
+            0,
+            800,
+            1000,
+            2000
+        ],
+        "241": [
+            0,
+            250,
+            1000,
+            2000
+        ],
+        "264": [
+            0,
+            1000,
+            3000,
+            4000
+        ],
+        "27": [
+            0,
+            500,
+            1000,
+            2000
+        ],
+        "28": [
+            0,
+            500,
+            1000,
+            2000
+        ],
+        "285": [
+            0,
+            1000,
+            1000,
+            2000
+        ],
+        "29": [
+            0,
+            500,
+            2000,
+            4000
+        ],
+        "30": [
+            0,
+            250,
+            1000,
+            2000
+        ],
+        "32": [
+            0,
+            250,
+            1000,
+            2000
+        ],
+        "33": [
+            0,
+            250,
+            1000,
+            2000
+        ],
+        "34": [
+            0,
+            500,
+            1000,
+            2000
+        ],
+        "35": [
+            0,
+            500,
+            1000,
+            2000
+        ],
+        "36": [
+            0,
+            1000,
+            2000,
+            2000
+        ],
+        "42": [
+            0,
+            1000,
+            2000,
+            4000
+        ],
+        "62": [
+            0,
+            250,
+            500,
+            1000
+        ],
+        "65": [
+            0,
+            500,
+            1000,
+            2000
+        ],
+        "74": [
+            0,
+            500,
+            1000,
+            2000
+        ],
+        "87": [
+            0,
+            500,
+            1000,
+            1000
+        ]
+    },
+    "module_id": "FCB_CTRL",
+    "rc_block_channel": -1,
+    "rc_channels": {
+        "rc_channel_enabled": [
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1
+        ],
+        "rc_channel_limits_max": [
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000,
+            2000
+        ],
+        "rc_channel_limits_min": [
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000,
+            1000
+        ],
+        "rc_channel_reverse": [
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1,
+            1
+        ],
+        "rc_smart_channels": {
+            "active": true,
+            "rc_channel_enabled": [
+                1,
+                1,
+                1,
+                1
+            ],
+            "rc_channel_limits_max": [
+                2000,
+                2000,
+                2000,
+                2000
+            ],
+            "rc_channel_limits_min": [
+                1000,
+                1000,
+                1000,
+                1000
+            ]
+        }
+    },
+    "read_only_mode": false,
+    "s2s_udp_listening_ip": "127.0.0.1",
+    "s2s_udp_listening_port": "61003",
+    "s2s_udp_packet_size": "8192",
+    "s2s_udp_target_ip": "127.0.0.1",
+    "s2s_udp_target_port": "60000",
+    "udp_proxy_enabled": true
 }
-
-
-
